--- a/Meus codigos/style.css
+++ b/Meus codigos/style.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.google.com/specimen/Outfit')
+@font-face {
+    font-family: outfit;
+    src: url('https://fonts.google.com/specimen/Outfit')
+}
+    
+
 
 
 main{
@@ -14,33 +19,33 @@ body {
     margin-left: auto;
     margin-right: auto;   
     margin-top: 100px; 
-    width: 500px;   
-    border-radius: 30px;
+    width: 430px;   
+    border-radius: 20px;
     padding-bottom: 30px;
 }
 
 .code {
-    border-radius: 20px;
+    border-radius: 10px;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
-    width: 460px;
+    width: 390px;
     
     
 }
 
 h1 {
     text-align: center;
-    margin-left: 50px;
-    margin-right: 50px;
-    font-family: Outfit;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-family: outfit;
 }
 
 p {
-    font-size: 15px;
+    font-size: 21px;
     text-align: center;
     margin-left: 50px;
     margin-right: 50px;
-    font-family: Outfit;
-    font-weight: 400;
+    font-family: outfit;
+    font-weight: ;
 }
